Dodaj usługę pobierania kategorii artykułów
